--- a/index.html
+++ b/index.html
@@ -207,13 +207,17 @@
                                                                 <th style="width:25%;text-align: center;" class="b1">মালিকের অংশ</th>
                                                             </tr>
                                                         </thead>
-                                                        <tbody style="height: 21px;">
+                                                        <tbody style="height: 42px;">
                                                             <tr>
                                                                 <td class="b1 input_bangla text-center">১</td>
                                                                 <td class="b1 input_bangla">দুদু মিয়া </td>
                                                                 <td class="b1 input_bangla text-center">০.৫</td>
                                                             </tr>
-                                                            
+                                                            <tr>
+                                                                <td class="b1 input_bangla text-center">২</td>
+                                                                <td class="b1 input_bangla">দুদু মিয়া </td>
+                                                                <td class="b1 input_bangla text-center">০.৫</td>
+                                                            </tr>
                                                         </tbody>
                                                     </table>
                                                     <table style="border: 1px dotted; border-collapse: collapse; margin:10px 2px ; width: 49%; font-size: 11px; float: right;">
@@ -226,7 +230,7 @@
                                                         </thead>
                                                         <tbody style="height: 21px;">
                                                             <tr>
-                                                                <td class="b1 input_bangla text-center">২</td>
+                                                                <td class="b1 input_bangla text-center">৩</td>
                                                                 <td class="b1 input_bangla">দুলু মিয়া</td>
                                                                 <td class="b1 input_bangla text-center">০.৫</td>
                                                             </tr>
@@ -284,7 +288,7 @@
                                                                 <th class="b1">জমির পরিমাণ (শতাংশ)</th>
                                                             </tr>
                                                         </thead>
-                                                        <tbody style="height: 42px;">
+                                                        <tbody style="height: 63px;">
                                                             <tr>
                                                                 <td class="b1 input_bangla text-center">৪</td>
                                                                 <td class="b1 input_bangla">৩৫২৬</td>
@@ -294,6 +298,13 @@
                                                             </tr>
                                                             <tr>
                                                                 <td class="b1 input_bangla text-center">৫</td>
+                                                                <td class="b1 input_bangla">৪১২৮</td>
+                                                                <td class="b1">
+                                                                    বাড়ী( আবাসিক) </td>
+                                                                <td class="b1 input_bangla">১৬</td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td class="b1 input_bangla text-center">৬</td>
                                                                 <td class="b1 input_bangla">৪১২৮</td>
                                                                 <td class="b1">
                                                                     বাড়ী( আবাসিক) </td>
@@ -416,3 +427,4 @@
 </body>
 
 </html>
+
