--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                                         <table style="margin-top:5px; width:100%;">
                                                             <tr>
                                                                 <td style="width: 170px;">মৌজার নাম ও জে. এল. নং:</td>
-                                                                <td class="dotted_botton input_bangla" style="padding: 0 10px 0 5px;">দৌলত নুরপুর - ১৫৭</td>
+                                                                <td class="dotted_botton input_bangla" style="padding: 0 10px 0 5px;">জুমা - ১৫২</td>
                                                                 <td style="width: 105px">উপজেলা/থানা:</td>
                                                                 <td class="dotted_botton" style="padding: 0 10px 0 5px;">মিঠাপুকুর</td>
                                                                 <td style="width: 40px">জেলা:</td>
@@ -182,7 +182,7 @@
                                                                     <!-- ২ নং রেজিস্টার অনুযায়ী হোল্ডিং নম্বর -->
                                                                     ২ নং রেজিস্টার অনুযায়ী হোল্ডিং নম্বর:</td>
                                                                 <td class="dotted_botton numeric_bangla" style="padding-left: 10px;">
-                                                                    ৩৫ </td>
+                                                                    ২০২৫-২৫৫ </td>
                                                             </tr>
                                                         </table>
 
@@ -190,7 +190,7 @@
                                                             <tr>
                                                                 <td style="width: 75px">খতিয়ান নং:</td>
                                                                 <td class="dotted_botton numeric_bangla" style="padding-left: 10px;">
-                                                               ৪৩ </td>
+                                                               ২০২৫-২৫৫ </td>
                                                             </tr>
                                                         </table>
                                                         <div style="height: 10px"></div>
@@ -210,12 +210,12 @@
                                                         <tbody style="height: 42px;">
                                                             <tr>
                                                                 <td class="b1 input_bangla text-center">১</td>
-                                                                <td class="b1 input_bangla">মন্জুরুল ইসলাম </td>
-                                                                <td class="b1 input_bangla text-center">০.৩৩৩</td>
+                                                                <td class="b1 input_bangla">গোলজার হোসেন খাঁন </td>
+                                                                <td class="b1 input_bangla text-center">০.৩৩৪</td>
                                                             </tr>
                                                             <tr>
                                                                 <td class="b1 input_bangla text-center">২</td>
-                                                                <td class="b1 input_bangla">মনারুল ইসলাম </td>
+                                                                <td class="b1 input_bangla">মোস্তফা খাঁন </td>
                                                                 <td class="b1 input_bangla text-center">০.৩৩৩</td>
                                                             </tr>
                                                         </tbody>
@@ -231,8 +231,8 @@
                                                         <tbody style="height: 21px;">
                                                             <tr>
                                                                 <td class="b1 input_bangla text-center">৩</td>
-                                                                <td class="b1 input_bangla">জিয়াউর রহমান</td>
-                                                                <td class="b1 input_bangla text-center">০.৩৩৪</td>
+                                                                <td class="b1 input_bangla">আলীয়ার খান</td>
+                                                                <td class="b1 input_bangla text-center">০.৩৩৩</td>
                                                             </tr>
                                                              
                                                         </tbody>
@@ -460,6 +460,7 @@
 </body>
 
 </html>
+
 
 
 
