--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                                                     <table style="border: 1px dotted; border-collapse: collapse; margin:10px 2px ; width: 100%; font-size: 12px;">
                                                         <tr>
                                                             <td class="b1 text-center" style="width: 50%;">সর্বমোট জমি (শতাংশ)</td>
-                                                            <td class="b1 input_bangla" style="width: 50%;">১৫৮</td>
+                                                            <td class="b1 input_bangla" style="width: 50%;">৩৩২</td>
                                                         </tr>
                                                     </table>
                                                     <div style="height: 10px;"></div>
@@ -374,20 +374,20 @@
 
                                                         <tr>
                                                             <td align="center">০</td>
-                                                            <td align="center">৭২৪</td>
-                                                            <td align="center">১২১</td>
-                                                            <td align="center">৩৯৫</td>
+                                                            <td align="center">৩,৭২৪</td>
+                                                            <td align="center">২,১২১</td>
+                                                            <td align="center">১,৩৯৫</td>
                                                             <td align="center">
-                                                                ১,২৪০</td>
+                                                                ৭,২৪০</td>
 
-                                                            <td align="center">১,২৪০</td>
+                                                            <td align="center">৭,২৪০</td>
                                                             <td align="center">
                                                                 ০ </td>
                                                             <td align="center"></td>
                                                         </tr>
                                                     </table>
                                                     <div style="width:100% !important; margin:10px 2px ;">
-                                                        <p class="dotted_botton"> সর্বমোট (কথায়): এক হাজার দুই শত চল্লিশ টাকা মাত্র ।
+                                                        <p class="dotted_botton"> সর্বমোট (কথায়): সাত হাজার দুই শত চল্লিশ টাকা মাত্র ।
                                                         </p>
                                                     </div>
                                                     <div class="row">
@@ -460,6 +460,7 @@
 </body>
 
 </html>
+
 
 
 
